--- a/jobportalsite/contact.html
+++ b/jobportalsite/contact.html
@@ -7,10 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./contact.css">
+    
     <title>CONTACT</title>
 </head>
 
 <body>
+    <!--===============================nav bar ================================================================-->
+
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">JobFinder</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./services.html">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./blog.html">Blog</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="./About.html">
+                            About
+                        </a>
+
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contact.html">Contact</a>
+                    </li>
+                </ul>
+                <form class="d-flex">
+                    <button class="btn0">Register</button>
+                    <button class="btn1 mx-2">Login</button>
+                </form>
+            </div>
+        </div>
+    </nav>
+    <!--===============================nav bar end ================================================================-->
+
+
     <section class="main py-5">
         <div class="container py-5 bg-light">
             <h1 class="text-center">REACH US</h1>
@@ -58,6 +100,50 @@
             </div>
 
     </section>
+
+    
+    <!--===============================footer================================================================-->
+
+
+    <section class="footer pt-5">
+        <div class="container-fluid pt-5">
+            <div class="row">
+                <div class="col-lg-10 m-auto">
+                    <div class="row pb-4">
+                        <div class="col-lg-3">
+                            <h3 class="PY-5">ABOUT US</h3>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, mollitia!</P>
+                        </div>
+                        <div class="col-lg-3">
+                            <h3 class="PY-5">CONTACT</h3>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, mollitia!</P>
+                            <P class="link pt-3">Phone : +91 1234567890</P>
+                            <P class="link">E-mail : 12345678@gmail.com</P>
+                        </div>
+                        <div class="col-lg-3">
+                            <h3 class="PY-5">IMPORTANT LINKS</h3>
+                            <P class="link">View project</P>
+                            <P class="link">Contact us</P>
+                            <P class="link">Testimonial</P>
+                            <P class="link">Properties</P>
+                            <P class="link">Support</P>
+                        </div>
+                        <div class="col-lg-3">
+                            <h3 class="PY-5">NEWS LETTER</h3>
+                            <P>Lorem ipsum dolor sit, amet consectetur </BR>
+                                adipisicing elit. Sit, sequi?</P>
+
+                            <input type="text" placeholder="Enter your email">
+                            <button>Go</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!--===============================footer end================================================================-->
+
 </body>
 
 </html>
