--- a/jobportalsite/services.html
+++ b/jobportalsite/services.html
@@ -99,6 +99,46 @@
             </div>
         </div>
     </div>
+
+     <!--===============================footer================================================================-->
+
+     <section class="footer pt-5">
+        <div class="container-fluid pt-5">
+            <div class="row">
+                <div class="col-lg-10 m-auto">
+                    <div class="row pb-4">
+                        <div class="col-lg-3">
+                            <h3 class="PY-5">ABOUT US</h3>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, mollitia!</P>
+                        </div>
+                        <div class="col-lg-3">
+                            <h3 class="PY-5">CONTACT</h3>
+                            <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, mollitia!</P>
+                            <P class="link pt-3">Phone : +91 1234567890</P>
+                            <P class="link">E-mail : 12345678@gmail.com</P>
+                        </div>
+                        <div class="col-lg-3">
+                            <h3 class="PY-5">IMPORTANT LINKS</h3>
+                            <P class="link">View project</P>
+                            <P class="link">Contact us</P>
+                            <P class="link">Testimonial</P>
+                            <P class="link">Properties</P>
+                            <P class="link">Support</P>
+                        </div>
+                        <div class="col-lg-3">
+                            <h3 class="PY-5">NEWS LETTER</h3>
+                            <P>Lorem ipsum dolor sit, amet consectetur </BR>
+                                adipisicing elit. Sit, sequi?</P>
+
+                            <input type="text" placeholder="Enter your email">
+                            <button>Go</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
