--- a/jobportalsite/services.html
+++ b/jobportalsite/services.html
@@ -61,7 +61,7 @@
                 <div class="main">
                     <div class="service">
                         <div class="service-logo">
-                            <img src="C:/Users/anilc/Downloads/robot-solid.svg" alt="">
+                            <i class="fi fi-rs-rocket-lunch"></i>
                         </div>
                         <h4>App Design</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate libero at sequi magnam
