--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ol>
             <li><a href="./DIGITAL/index.html">DIGITAL</a></li>
             <li><a href="./jobportalsite/jobportal.html">JOB PORTAL	</a></li>
-            <li><a href="./nxtecs/index.php"> NXTECS </a></li>
+            <li><a href="./nxtecs/index.html"> NXTECS </a></li>
         </ol>
     </section>
 </body>
