--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </div>
     <section>
         <ol>
-            <li><a href="./DIGITAL/index.html">DIGITAL</a></li>
-            <li><a href="./jobportalsite/jobportal.html">JOB PORTAL	</a></li>
+            <li><a href="./DIGITAL/index.html"></a></li>
+            <li><a href="./jobportalsite/jobportal.html"></a></li>
             <li><a href="./nxtecs/index.html"> NXTECS </a></li>
         </ol>
     </section>
