--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -25,10 +25,10 @@
 </head>
 <body>
     <!-- header-start -->
-	<?php require_once("inc/header.php");?>
+	<?php require_once("inc/header.html");?>
     <!-- header-start -->
     <!-- slide-bar start -->
-	<?php require_once("inc/side_bar.php");?>
+	<?php require_once("inc/side_bar.html");?>
     <!-- slide-bar end -->
 
     <main>
