--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -681,7 +681,7 @@
         </div>-->
         <!-- brand-area-end -->
         <!-- footer-area-start -->
-		<?php require_once("inc/footer.php");?>
+		<?php require_once("inc/footer.html");?>
         <!-- footer-area-end -->
     </main>
     <!-- JS here -->
