--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -25,10 +25,10 @@
 </head>
 <body>
     <!-- header-start -->
-	<?php require_once("inc/header.html");?>
+	<?php require_once("inc/header.php");?>
     <!-- header-start -->
     <!-- slide-bar start -->
-	<?php require_once("inc/side_bar.html");?>
+	<?php require_once("inc/side_bar.php");?>
     <!-- slide-bar end -->
 
     <main>
@@ -681,7 +681,7 @@
         </div>-->
         <!-- brand-area-end -->
         <!-- footer-area-start -->
-		<?php require_once("inc/footer.html");?>
+		<?php require_once("inc/footer.php");?>
         <!-- footer-area-end -->
     </main>
     <!-- JS here -->
