--- a/DIGITAL/index.html
+++ b/DIGITAL/index.html
@@ -601,7 +601,7 @@
 
     <!-- ======= Team Section ======= -->
     <section id="team" class="team">
-      <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade-down">
 
         <div class="section-title">
           <h2>Team</h2>
