--- a/nxtecs/skills.html
+++ b/nxtecs/skills.html
@@ -32,11 +32,11 @@
                 <div class="row">
                     <div class="col-xl-6 offset-xl-3">
                         <div class="page-title text-center">
-                            <h1>Skills</h1>
+                            <h1>DevOps</h1>
                             <div class="breadcrumb">
                                 <ul class="breadcrumb-list">
                                     <li><a href="index.html">Home <i class="far fa-chevron-right"></i></a></li>
-                                    <li><a class="active" href="#">Skills</a></li>
+                                    <li><a class="active" href="#">DevOps</a></li>
                                 </ul>
                             </div>
                         </div>
