--- a/nxtecs/skills.html
+++ b/nxtecs/skills.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="assets/css/skills.css">
     <link rel="stylesheet" href="assets/img/team">
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-    <title>Skills</title>
+    <title>DevOps</title>
 </head>
 
 <body>
