--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -22,14 +23,117 @@
     <link rel="stylesheet" href="assets/css/meanmenu.css">
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/main.css">
-		<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
 </head>
+
 <body>
     <!-- header-start -->
-	<?php require_once("inc/header.php");?>
+    <header class="header-transparent">
+        <div id="sticky-header" class="main-menu-area menu-padding pl-55 pr-55">
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col-xl-2 col-lg-7 col-md-6 col-8">
+                        <div class="logo">
+                            <a href="index.html"><img src="assets/img/logo.png" style="width:170px;" alt="" /></a>
+                        </div>
+                    </div>
+                    <div class="col-xl-7 d-none d-xl-block">
+                        <div class="main-menu text-left ml-15">
+                            <nav id="mobile-menu">
+                                <ul>
+
+                                    <li class="active"><a href="index.html">Home</a></li>
+                                    <li><a href="about_us.html">About Us</a></li>
+                                    <!--<li><a href="course.html">AEM</a></li>-->
+
+                                    <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
+                                        <ul class="sub-menu text-left">
+                                            <li><a href="skills.html">Devops</a></li>
+                                            <li><a href="#">AE</a></li>
+                                            <li><a href="#">Cyber Security</a></li>
+                                            <li><a href="#">Python</a></li>
+                                            <li><a href="#">Data Analytics</a></li>
+                                        </ul>
+                                    </li>
+                                    <!-- <li><a href="#">Events <i class="far fa-angle-down"></i></a>
+                                        <ul class="sub-menu text-left">
+                                            <li><a href="events.html">Events</a>
+                                            <li><a href="events-details.html">Events Details</a>
+                                        </ul>
+                                    </li>-->
+
+                                    <li><a href="contact_us.html">Contact Us</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <div class="col-xl-3 col-lg-5 col-md-6 col-4">
+                        <div class="header-right d-sm-flex align-items-center justify-content-end">
+                            <div class="header-icon d-none d-md-inline-block">
+                                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a href="#"><i class="fab fa-youtube"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                            </div>
+                            <!--<div class="header-sing d-none d-md-inline-block">
+                                <a href="contact.html"> <i class="far fa-user-circle"></i>sing in</a>
+                            </div>-->
+                            <div class="hamburger-menu menu-bar info-bar">
+                                <a href="#"><img src="assets/img/icon/bar.png" alt=""></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <!-- header-start -->
     <!-- slide-bar start -->
-	<?php require_once("inc/side_bar.php");?>
+    <aside class="slide-bar">
+        <div class="close-mobile-menu">
+            <a href="javascript:void(0);"><i class="fas fa-times"></i></a>
+        </div>
+
+        <!-- offset-sidebar start -->
+        <div class="offset-sidebar">
+            <div class="offset-widget offset-logo mb-30">
+                <a href="index.php">
+                    <img src="assets/img/side_bar_logo.png" style="width:200px;" alt="logo">
+                </a>
+            </div>
+            <div class="offset-widget mb-40">
+                <div class="info-widget">
+                    <h4 class="offset-title mb-20">About Us</h4>
+                    <p class="mb-30">
+                        We simplify your career upgrade just like AEM simplifies the management of a website’s content.
+                    </p>
+                    <a class="c-btn btn-round-02" href="">Contact Us</a>
+                </div>
+            </div>
+            <div class="offset-widget mb-30 pr-10">
+                <div class="info-widget info-widget2">
+                    <h4 class="offset-title mb-20">Contact Info</h4>
+                    <p> <i class="fal fa-address-book"></i> Bangalore, Karnataka,India.</p>
+                    <p> <i class="fal fa-phone"></i> +91 7975935848, +91 7204025956</p>
+                    <p> <i class="fal fa-envelope-open"></i> info@nxtecs.com </p>
+                </div>
+            </div>
+        </div>
+        <!-- offset-sidebar end -->
+
+        <!-- side-mobile-menu start -->
+        <nav class="side-mobile-menu">
+            <ul id="mobile-menu-active">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about_us.html">About Us</a></li>
+                <li><a href="courses.html">Courses</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="contact_us.html">Contact Us</a></li>
+            </ul>
+        </nav>
+        <!-- side-mobile-menu end -->
+    </aside>
+    <div class="body-overlay"></div>
     <!-- slide-bar end -->
     <main>
         <!--page-title-area start-->
@@ -60,7 +164,8 @@
                             <div class="section-title text-left mb-20 pr-160">
                                 <span><i class="fal fa-ellipsis-h"></i> Quick Contact</span>
                                 <h2>Get In Touch</h2>
-                                <p>The best way to get started is to stop thinking and get started. To get started reach me here</p>
+                                <p>The best way to get started is to stop thinking and get started. To get started reach
+                                    me here</p>
                             </div>
                             <ul class="contact-list mb-40">
                                 <li>
@@ -115,7 +220,10 @@
                     </div>
                     <div class="col-xl-7 col-lg-7 col-md-6">
                         <div class="map-area contact-map mb-30">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248849.88654003857!2d77.49085274762706!3d12.953959987171352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1662216579772!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248849.88654003857!2d77.49085274762706!3d12.953959987171352!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae1670c9b44e6d%3A0xf8dfc3e8517e4fe0!2sBengaluru%2C%20Karnataka!5e0!3m2!1sen!2sin!4v1662216579772!5m2!1sen!2sin"
+                                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
@@ -157,13 +265,14 @@
                                     </div>
                                     <div class="col-12">
                                         <div class="input-text message-text">
-                                            <textarea name="" id="" cols="30" rows="10" placeholder="Write  Message"></textarea>
+                                            <textarea name="" id="" cols="30" rows="10"
+                                                placeholder="Write  Message"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-12">
                                         <div class="lg-btn lg-btn-03 text-center">
                                             <a class="c-btn" href="#">send message <i
-                                                class="far fa-long-arrow-alt-right"></i></a>
+                                                    class="far fa-long-arrow-alt-right"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -175,7 +284,7 @@
         </div>
         <!-- contact-area-end -->
         <!-- footer-area-start -->
-		<?php require_once("inc/footer.php");?>
+        <?php require_once("inc/footer.php");?>
         <!-- footer-area-end -->
     </main>
     <!-- JS here -->
@@ -200,4 +309,5 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
+
 </html>
