--- a/nxtecs/contact_us.html
+++ b/nxtecs/contact_us.html
@@ -48,11 +48,11 @@
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
-                                            <li><a href="skills.html">Devops</a></li>
-                                            <li><a href="#">AE</a></li>
-                                            <li><a href="#">Cyber Security</a></li>
-                                            <li><a href="#">Python</a></li>
-                                            <li><a href="#">Data Analytics</a></li>
+                                            <li><a href="devops.html">Devops</a></li>
+                                            <li><a href="ae.html">AE</a></li>
+                                            <li><a href="cybersecurity.html">Cyber Security</a></li>
+                                            <li><a href="python.html">Python</a></li>
+                                            <li><a href="dataanalyst.html">Data Analytics</a></li>
                                         </ul>
                                     </li>
                                     <!-- <li><a href="#">Events <i class="far fa-angle-down"></i></a>
@@ -124,10 +124,26 @@
         <!-- side-mobile-menu start -->
         <nav class="side-mobile-menu">
             <ul id="mobile-menu-active">
-                <li><a href="index.html">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="courses.html">Courses</a></li>
-                <li><a href="events.html">Events</a></li>
+                <!--<li><a href="course.html">AEM</a></li>-->
+
+                <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
+                    <ul class="sub-menu text-left">
+                        <li><a href="devops.html">Devops</a></li>
+                        <li><a href="ae.html">AE</a></li>
+                        <li><a href="cybersecurity.html">Cyber Security</a></li>
+                        <li><a href="python.html">Python</a></li>
+                        <li><a href="dataanalyst.html">Data Analytics</a></li>
+                    </ul>
+                </li>
+                <!-- <li><a href="#">Events <i class="far fa-angle-down"></i></a>
+                        <ul class="sub-menu text-left">
+                            <li><a href="events.html">Events</a>
+                            <li><a href="events-details.html">Events Details</a>
+                        </ul>
+                    </li>-->
+
                 <li><a href="contact_us.html">Contact Us</a></li>
             </ul>
         </nav>
