--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/meanmenu.css">
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/devops.css">
     <link rel="stylesheet" href="assets/css/customstyle.css">
 	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
 	
@@ -31,7 +32,7 @@
                 <div class="row align-items-center">
                     <div class="col-xl-2 col-lg-7 col-md-6 col-8">
                         <div class="logo">
-                            <a href="index.html"><img src="assets/img/logo.png" style="width:170px;" alt="" /></a>
+                            <a href="index.html"><img src="assets/img/logo.png" style="width:170px;" alt=""/></a>
                         </div>
                     </div>
                     <div class="col-xl-7 d-none d-xl-block">
@@ -45,11 +46,11 @@
 									
 									<li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
-                                            <li><a href="skills.html">Devops</a></li>
-                                            <li><a href="#">AE</a></li>
-                                            <li><a href="#">Cyber Security</a></li>
-                                            <li><a href="#">Python</a></li>
-                                            <li><a href="#">Data Analytics</a></li>
+                                            <li><a href="devops.html">Devops</a></li>
+                                            <li><a href="ae.html">AE</a></li>
+                                            <li><a href="cybersecurity.html">Cyber Security</a></li>
+                                            <li><a href="python.html">Python</a></li>
+                                            <li><a href="dataanalyst.html">Data Analytics</a></li>
                                         </ul>
                                     </li>
                                    <!-- <li><a href="#">Events <i class="far fa-angle-down"></i></a>
@@ -121,10 +122,26 @@
         <!-- side-mobile-menu start -->
         <nav class="side-mobile-menu">
             <ul id="mobile-menu-active">
-				<li><a href="index.html">Home</a></li>
-				<li><a href="about_us.html">About Us</a></li>
-				<li><a href="courses.html">Courses</a></li>
-				<li><a href="events.html">Events</a></li>
+				<li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about_us.html">About Us</a></li>
+                <!--<li><a href="course.html">AEM</a></li>-->
+
+                <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
+                    <ul class="sub-menu text-left">
+                        <li><a href="devops.html">Devops</a></li>
+                        <li><a href="ae.html">AE</a></li>
+                        <li><a href="cybersecurity.html">Cyber Security</a></li>
+                        <li><a href="python.html">Python</a></li>
+                        <li><a href="dataanalyst.html">Data Analytics</a></li>
+                    </ul>
+                </li>
+                <!-- <li><a href="#">Events <i class="far fa-angle-down"></i></a>
+                        <ul class="sub-menu text-left">
+                            <li><a href="events.html">Events</a>
+                            <li><a href="events-details.html">Events Details</a>
+                        </ul>
+                    </li>-->
+
                 <li><a href="contact_us.html">Contact Us</a></li>
             </ul>
         </nav>
