--- a/nxtecs/devops.html
+++ b/nxtecs/devops.html
@@ -351,7 +351,7 @@
                                             <input type="text" placeholder="Enter Name" name="name" required>
 
                                             <label for="phone"><b>Mobile number</b></label>
-                                            <input type="tel" placeholder="Enter Mobile number" name="phone"
+                                            <input type="tel" maxlength="10" max="9" min="1" size="1" placeholder="Enter Mobile number" name="phone"
                                                 pattern="[0-9]{10}" required>
 
                                             <label for="email"><b>Email</b></label>
