--- a/nxtecs/devops.html
+++ b/nxtecs/devops.html
@@ -246,7 +246,7 @@
                                 <br>
                                 <button onclick="document.getElementById('id01').style.display='block'" type="button"
                                     class="block">Book a call</button>
-                                    <button onclick="document.getElementById('id02').style.display='block'" type="button"
+                                <button onclick="document.getElementById('id02').style.display='block'" type="button"
                                     class="block">Book a class</button>
                             </div>
                         </div>
@@ -269,7 +269,7 @@
                                 <span>12 years of experience</span> <br>
                                 <button onclick="document.getElementById('id01').style.display='block'" type="button"
                                     class="block">Book a call</button>
-                                    <button onclick="document.getElementById('id02').style.display='block'" type="button"
+                                <button onclick="document.getElementById('id02').style.display='block'" type="button"
                                     class="block">Book a class</button>
                             </div>
                         </div>
@@ -290,12 +290,13 @@
                             <div class="member-info">
                                 <h4>William Anderson</h4>
                                 <span>16 years of experience</span> <br>
+
+
+
+                                <!--  <h2>Modal book a call Form</h2>-->
+
                                 <button onclick="document.getElementById('id01').style.display='block'" type="button"
                                     class="block">Book a call</button>
-
-
-                                <!--  <h2>Modal Signup Form</h2>-->
-
 
 
                                 <div id="id01" class="modal">
@@ -314,7 +315,8 @@
                                                 pattern="[0-9]{10}" required>
 
                                             <label for="email"><b>Email</b></label>
-                                            <input type="email" placeholder="Enter your email" name="email" required> <br><br>
+                                            <input type="email" placeholder="Enter your email" name="email" required>
+                                            <br><br>
 
                                             <!-- <label>
                                                 <input type="checkbox" checked="checked" name="remember"
@@ -334,7 +336,7 @@
                                     </form>
                                 </div>
 
-
+                                <!--  <h2>Modal book a class Form</h2>-->
 
                                 <button onclick="document.getElementById('id02').style.display='block'" type="button"
                                     class="block">Book a class</button>
@@ -351,8 +353,9 @@
                                             <input type="text" placeholder="Enter Name" name="name" required>
 
                                             <label for="phone"><b>Mobile number</b></label>
-                                            <input type="tel" maxlength="10" max="9" min="1" size="1" placeholder="Enter Mobile number" name="phone"
-                                                pattern="[0-9]{10}" required>
+                                            <input type="tel" maxlength="10" max="9" min="1" size="1"
+                                                placeholder="Enter Mobile number" name="phone" pattern="[0-9]{10}"
+                                                required>
 
                                             <label for="email"><b>Email</b></label>
                                             <input type="email" placeholder="Enter your email" name="email" required>
@@ -383,24 +386,15 @@
                                         </div>
                                     </form>
                                 </div>
-
-
-
-
-
-
                             </div>
                         </div>
                     </div>
-
-
-
-
                 </div>
-
             </div>
         </section>
+
         <!-- End Team Section -->
+        
         <!-- footer Section -->
 
         <footer class="footer-area pt-65 pb-45" data-background="assets/img/bg/fot-01-bg.png">
