--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -832,11 +832,11 @@
                                         <strong>Email:</strong> info@NXTECS.com<br>
                                     </p>
                                     <div class="social-links mt-3">
-                                        <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
-                                        <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
-                                        <a href="#" class="instagram"><i class="fab fa-instagram"></i></a>
-                                        <a href="#" class="google-plus"><i class="fab fa-whatsapp"></i></a>
-                                        <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                                        <a href="#" class="link"><i class="fab fa-twitter"></i></a>
+                                        <a href="#" class="link"><i class="fab fa-facebook"></i></a>
+                                        <a href="#" class="link"><i class="fab fa-instagram"></i></a>
+                                        <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
+                                        <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -844,30 +844,30 @@
                             <div class="col-lg-2 col-md-6 footer-links">
                                 <h4>Useful Links</h4>
                                 <ul>
-                                    <li><i class="far fa-angle-right"></i> <a href="#">Home</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#">About us</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#">Skills</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#">Contact us</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#">Privacy policy</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">Home</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">About us</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">Skills</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">Contact us</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">Privacy policy</a></li>
                                 </ul>
                             </div>
 
                             <div class="col-lg-3 col-md-6 footer-links">
                                 <h4>Popular Jobs</h4>
                                 <ul>
-                                    <li><i class="far fa-angle-right"></i> <a href="#">AEM Architects</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#">AEM Developer</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#">AEM Manager</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#">AEM Full stack Developers </a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#">AEM QA senior consultant</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Architects</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Developer</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Manager</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Full stack Developers </a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM QA senior consultant</a></li>
                                 </ul>
                             </div>
 
                             <div class="col-lg-4 col-md-6 footer-newsletter">
-                                <h4>Write us Here</h4>
+                                <h4>Mail us Here</h4>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                                 <form action="" method="post">
-                                    <input type="email" name="email"><input type="submit" value="Submit">
+                                    <input type="email" name="email"><input class="link1" type="submit" value="Submit">
                                 </form>
 
                             </div>
