--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -822,7 +822,7 @@
                             <div class="col-lg-3 col-md-6">
                                 <div class="footer-info">
                                     <div class="logo">
-                                        <a href="index.html"><img src="assets/img/logo.png" style="width:170px;"
+                                        <a href="index.html"><img src="assets/img/logo.png" style="width:170px;" 
                                                 alt="" /></a>
                                     </div>
                                     <p>
@@ -876,7 +876,7 @@
                     </div>
                 </div>
 
-                <div class="container">
+                <div class="container1">
                     <div class="copyright">
                         &copy; Copyright <strong><span> NXTECS </span></strong>. All rights Reserved
                     </div>
