--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -822,7 +822,7 @@
                             <div class="col-lg-3 col-md-6">
                                 <div class="footer-info">
                                     <div class="logo">
-                                        <a href="index.html"><img src="assets/img/logo.png" style="width:170px;" 
+                                        <a href="index.html"><img src="assets/img/logo.png" style="width:170px;"
                                                 alt="" /></a>
                                     </div>
                                     <p>
@@ -845,11 +845,15 @@
                                 <br>
                                 <h4>Useful Links</h4>
                                 <ul>
-                                    <li><i class="far fa-angle-right"></i> <a href="index.html" class="link">Home</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="about_us.html" class="link">About us</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="index.html" class="link">Home</a>
+                                    </li>
+                                    <li><i class="far fa-angle-right"></i> <a href="about_us.html" class="link">About
+                                            us</a></li>
                                     <li><i class="far fa-angle-right"></i> <a href="" class="link">Skills</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="contact_us.html" class="link">Contact us</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="" class="link">Privacy policy</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="contact_us.html"
+                                            class="link">Contact us</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="" class="link">Privacy policy</a>
+                                    </li>
                                 </ul>
                             </div>
 
@@ -857,11 +861,15 @@
                                 <br>
                                 <h4>Popular Jobs</h4>
                                 <ul>
-                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Architects</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Developer</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Architects</a>
+                                    </li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Developer</a>
+                                    </li>
                                     <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Manager</a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Full stack Developers </a></li>
-                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM QA senior consultant</a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Full stack
+                                            Developers </a></li>
+                                    <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM QA senior
+                                            consultant</a></li>
                                 </ul>
                             </div>
 
@@ -880,17 +888,16 @@
                 </div>
 
                 <div class="container1">
-                    <div class="copyright">
-                        &copy; Copyright <strong><span> NXTECS </span></strong>. All rights Reserved
-                    </div>
-                    <div class="credits">
-                        <!-- All the links in the footer should remain intact. -->
-                        <!-- You can delete the links only if you purchased the pro version. -->
-                        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
-                       
-                    </div>
+                    &copy; Copyright <strong><span> NXTECS </span></strong>. All rights Reserved
                 </div>
+                <!-- <div class="credits">
+                         All the links in the footer should remain intact. -->
+                <!-- You can delete the links only if you purchased the pro version. -->
+                <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
+                       
+                    </div> -->
+
             </footer><!-- End Footer -->
             <!-- footer-area-end -->
     </main>
