--- a/nxtecs/devops.html
+++ b/nxtecs/devops.html
@@ -395,39 +395,92 @@
 
         <!-- End Team Section -->
         
-        <!-- footer Section -->
-
-        <footer class="footer-area pt-65 pb-45" data-background="assets/img/bg/fot-01-bg.png">
-            <div class="container">
-                <div class="row mb-55 no-gutters align-items-center">
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-12">
-                        <div class="footer-logo">
-                            <!--<a href="index.html"><img src="assets/img/logo/footer-01-logo.png" alt=""></a>-->
-                            <img src="assets/img/side_bar_logo.png" style="width:200px;" alt="logo">
-                        </div>
-                    </div>
-                    <div class="col-xl-8 col-lg-8 col-md-8 col-12">
-                        <div class="footer-social-icon text-right pb-70">
-                            <a class="fot-fb active pb-70" href="#"><i class="fab fa-facebook-f"></i> Facebook</a>
-                            <a class="fot-twitter pb-70" href="#"><i class="fab fa-twitter"></i> Twitter</a>
-                            <a class="fot-google pb-70" href="#"><i class="fab fa-youtube"></i> Youtube</a>
-                            <a class="fot-insta pb-70" href="#"><i class="fab fa-instagram"></i> Instagram</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="copyright-area mt-15 text-center pt-20 pb-20">
+        <footer id="footer">
+            <div class="footer-top">
+                <div class="container">
                     <div class="row">
-                        <div class="col-xl-12">
-                            <div class="copyright-text">
-                                <p>Copyright © 2022 <a href="#">Courses</a> All Rights Reserved.</p>
+
+                        <div class="col-lg-3 col-md-6">
+                            <div class="footer-info">
+                                <div class="logo">
+                                    <a href="index.html"><img src="assets/img/logo.png" style="width:170px;"
+                                            alt="" /></a>
+                                </div>
+                                <p>
+                                    Bangalore <br>
+                                    Karnataka, INDIA<br><br>
+                                    <strong>Phone:</strong> +91 1234567890<br>
+                                    <strong>Email:</strong> info@NXTECS.com<br>
+                                </p>
+                                <div class="social-links mt-3">
+                                    <a href="#" class="link"><i class="fab fa-twitter"></i></a>
+                                    <a href="#" class="link"><i class="fab fa-facebook"></i></a>
+                                    <a href="#" class="link"><i class="fab fa-instagram"></i></a>
+                                    <a href="#" class="link"><i class="fab fa-whatsapp"></i></a>
+                                    <a href="#" class="link"><i class="fab fa-linkedin"></i></a>
+                                </div>
                             </div>
                         </div>
+
+                        <div class="col-lg-2 col-md-6 footer-links">
+                            <br>
+                            <h4>Useful Links</h4>
+                            <ul>
+                                <li><i class="far fa-angle-right"></i> <a href="index.html" class="link">Home</a>
+                                </li>
+                                <li><i class="far fa-angle-right"></i> <a href="about_us.html" class="link">About
+                                        us</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="" class="link">Skills</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html"
+                                        class="link">Contact us</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="" class="link">Privacy policy</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="col-lg-3 col-md-6 footer-links">
+                            <br>
+                            <h4>Popular Jobs</h4>
+                            <ul>
+                                <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Architects</a>
+                                </li>
+                                <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Developer</a>
+                                </li>
+                                <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Manager</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM Full stack
+                                        Developers </a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="#" class="link">AEM QA senior
+                                        consultant</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="col-lg-4 col-md-6 footer-newsletter">
+                            <br>
+                            <h4>Mail us Here</h4>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
+                            <form action="" method="post">
+                                <input type="email" name="email"><input class="link1" type="submit" value="Submit">
+                            </form>
+
+                        </div>
+
                     </div>
                 </div>
             </div>
-        </footer>
-        <!--End footer Section -->
+
+            <div class="container1">
+                &copy; Copyright <strong><span> NXTECS </span></strong>. All rights Reserved
+            </div>
+            <!-- <div class="credits">
+                     All the links in the footer should remain intact. -->
+            <!-- You can delete the links only if you purchased the pro version. -->
+            <!-- Licensing information: https://bootstrapmade.com/license/ -->
+            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/
+                   
+                </div> -->
+
+        </footer><!-- End Footer -->
+        <!-- footer-area-end -->
     </main>
     <!-- JS here -->
     <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
