--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -47,11 +47,11 @@
 
                                     <li><a href="#">Skills <i class="far fa-angle-down"></i></a>
                                         <ul class="sub-menu text-left">
-                                            <li><a href="skills.html">Devops</a></li>
-                                            <li><a href="#">AE</a></li>
-                                            <li><a href="#">Cyber Security</a></li>
-                                            <li><a href="#">Python</a></li>
-                                            <li><a href="#">Data Analytics</a></li>
+                                            <li><a href="devops.html">Devops</a></li>
+                                            <li><a href="ae.html">AE</a></li>
+                                            <li><a href="cybersecurity.html">Cyber Security</a></li>
+                                            <li><a href="python.html">Python</a></li>
+                                            <li><a href="dataanalyst.html">Data Analytics</a></li>
                                         </ul>
                                     </li>
                                     <!-- <li><a href="#">Events <i class="far fa-angle-down"></i></a>
@@ -623,7 +623,7 @@
         </div>-->
         <!-- brand-area-end -->
         <footer id="footer">
-            <div class="footer-top">
+            <div class="footer-top"> <br>
                 <div class="container">
                     <div class="row">
 
@@ -658,8 +658,7 @@
                                 <li><i class="far fa-angle-right"></i> <a href="about_us.html" class="link">About
                                         us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Skills</a></li>
-                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html"
-                                        class="link">Contact us</a></li>
+                                <li><i class="far fa-angle-right"></i> <a href="contact_us.html" class="link">Contact us</a></li>
                                 <li><i class="far fa-angle-right"></i> <a href="" class="link">Privacy policy</a>
                                 </li>
                             </ul>
