--- a/nxtecs/about_us.html
+++ b/nxtecs/about_us.html
@@ -685,7 +685,8 @@
                             <h4>Mail us Here</h4>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolores!</p>
                             <form action="" method="post">
-                                <input type="email" name="email"><input class="link1" type="submit" value="Submit">
+                                <input type="email" name="email"> <br>
+                                <input class="link1" type="submit" value="Submit">
                             </form>
 
                         </div>
